welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var six: Int = 0
  for (i <- 0 to nums.length-2) {
    if ((nums(i)==6) && (nums(i+1)==6)) || (nums(i)==6 && nums(i+1)=7)){
      six=six+1
    }
  }
  return six
}